# harlequin-clickhouse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/harlequin_clickhouse/: __init__.py  adapter.py  cli_options.py
tests/: test_adapter.py
