[project]
name = "harlequin-clickhouse"
version = "0.1.1"
description = "A Harlequin adapter for Clickhouse"
authors = [{ name = "Thomaub", email = "github.thomaub@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<3.14.0"
dependencies = ["harlequin>=2.0", "clickhouse-driver>=0.2.7"]
keywords = ["harlequin", "clickhouse", "sql", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/harlequin-org/harlequin-clickhouse"
Repository = "https://github.com/harlequin-org/harlequin-clickhouse"
Issues = "https://github.com/harlequin-org/harlequin-clickhouse/issues"

[project.entry-points."harlequin.adapter"]
clickhouse = "harlequin_clickhouse:HarlequinClickHouseAdapter"

[project.optional-dependencies]
dev = [
  "ruff>=0.1.6",
  "pytest>=7.4.3",
  "mypy>=1.7.0",
  "pre-commit>=3.5.0",
  "importlib_metadata>=4.6.0; python_version<'3.10'",
  "testcontainers[clickhouse]>=4.4.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.12.10",
  "pytest>=8.4.1",
  "importlib_metadata>=4.6.0; python_version<'3.10'",
  "testcontainers[clickhouse]>=4.4.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"


[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I"]
